Fix: fix post spacing

--- a/instagram-frontend/src/scenes/User/components/UserPosts/userPosts.scss
+++ b/instagram-frontend/src/scenes/User/components/UserPosts/userPosts.scss
@@ -59,14 +59,16 @@
   &__posts {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     &__single {
       position: relative;
       max-width: 33%;
-      margin-bottom: 28px;
+      margin: 0 28px 28px 0;
       font-size: 0;
       img {
         width: 100%;
+      }
+      &:nth-child(3n) {
+        margin-right: 0;
       }
       &__hover {
         position: absolute;
